--- a/pet-clinic-web/src/main/resources/templates/fragments/inputField.html
+++ b/pet-clinic-web/src/main/resources/templates/fragments/inputField.html
@@ -1,4 +1,5 @@
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<!-- <html lang="en" xmlns:th="http://www.thymeleaf.org"> -->
+<html>
 <body>
   <form>
     <th:block th:fragment="input (label, name, type)">
