--- a/pet-clinic-web/src/main/less/petclinic.less
+++ b/pet-clinic-web/src/main/less/petclinic.less
@@ -176,7 +176,7 @@ table td.action-column {
 .cluster-view {
   margin-bottom: 0;
 }
-
+/*
 .deployment-status-deployed {
   .label-success;
 }
@@ -217,7 +217,7 @@ table td.action-column {
 .alert-danger {
   .alert-variant(fade(@alert-danger-bg, 70%); @alert-danger-border; @alert-danger-text);
 }
-
+*/
 .myspinner {
   animation-name: spinner;
   animation-duration: 2s;
